modificade input attribute autocomplete

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="form-content">
         <p id="alert"></p>
         <form id="form">
-          <input type="text" name="name" id="name" placeholder="Nome" required>
-          <input type="email" name="email" id="email" placeholder="Email" required>
+          <input type="text" name="name" id="name" placeholder="Nome" autocomplete="off" required>
+          <input type="email" name="email" id="email" placeholder="Email" autocomplete="off" required>
 
           <button type="submit">Quero me cadastrar</button>
 
